Updated the nav-bar

--- a/client/src/css/colors.css
+++ b/client/src/css/colors.css
@@ -56,7 +56,7 @@
   --palette-3: #D66BA0;
   --palette-4: #AF4D98;
   --palette-5: #AF4D98;
-  --palette-6: #F4E4BA;
+  --palette-6: #000000;
 }
 
 /* ======= USAGE ======= */
